configuracion de la documentacion

--- a/config-data/catalogo-service.yml
+++ b/config-data/catalogo-service.yml
@@ -1,5 +1,11 @@
 server:
   port: 8081
+springdoc:
+  api-doc:
+    enabled: true
+  swagger-ui:
+    enabled: true
+    path: /doc/swagger-ui.html
 spring:
   jpa:
     hibernate.ddl-auto: update
