--- a/config-data/catalogo-service.yml
+++ b/config-data/catalogo-service.yml
@@ -16,6 +16,10 @@ spring:
     url: jdbc:mysql://localhost:3306/catalogo
     username: root
     password:
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_URI:http://localhost:8090/eureka
 
 
 
