--- a/config-data/gateway-service.yml
+++ b/config-data/gateway-service.yml
@@ -9,7 +9,7 @@ spring:
     gateway:
       discovery:
         locator:
-          enable: true
+          enabled: true
       routes:
         - id: catalogo-service
           uri: lb://catalogo-service
