filtros de api gateway

--- a/config-data/gateway-service.yml
+++ b/config-data/gateway-service.yml
@@ -19,6 +19,8 @@ spring:
           uri: lb://cliente-service
           predicates:
             - Path=/cliente/**
+          filters:
+            - AuthFilter
         - id: venta-service
           uri: lb://venta-service
           predicates:
