--- a/config-data/gateway-service.yml
+++ b/config-data/gateway-service.yml
@@ -19,8 +19,8 @@ spring:
           uri: lb://cliente-service
           predicates:
             - Path=/cliente/**
-          filters:
-            - AuthFilter
+          #filters:
+          #  - AuthFilter
         - id: venta-service
           uri: lb://venta-service
           predicates:
