--- a/config-data/cliente-service.yml
+++ b/config-data/cliente-service.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8082
+  port: ${PORT:${SERVER_PORT:0}}
 springdoc:
   api-doc:
     enabled: true
@@ -16,7 +16,10 @@ spring:
     url: jdbc:mysql://localhost:3306/cliente
     username: root
     password:
+
 eureka:
   client:
     serviceUrl:
       defaultZone: ${EUREKA_URI:http://localhost:8090/eureka}
+  instance:
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
