cambios de filtros

--- a/config-data/gateway-service.yml
+++ b/config-data/gateway-service.yml
@@ -41,3 +41,8 @@ spring:
             - Path=/venta/**
           filters:
             - AuthFilter
+        - id: auth-service
+          uri: lb://auth-service
+          predicates:
+            - Path=/auth/**
+      
