--- a/config-data/auth-service.yml
+++ b/config-data/auth-service.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8085
+  port: ${PORT:${SERVER_PORT:0}}
 spring:
   jpa:
     hibernate.ddl-auto: update
@@ -14,6 +14,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: ${EUREKA_URI:http://localhost:8090/eureka}
+  instance:
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 
 
