--- a/config-data/admin-service.yml
+++ b/config-data/admin-service.yml
@@ -6,6 +6,11 @@ eureka:
       defaultZone: ${EUREKA_URI:http://localhost:8090/eureka}
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+spring:
+  security:
+    user:
+      name: root
+      password: s3cr3t
 management:
   endpoints:
     web:
