--- a/config-data/catalogo-service.yml
+++ b/config-data/catalogo-service.yml
@@ -11,6 +11,7 @@ spring:
     hibernate.ddl-auto: update
     show-sql: true
     generate-ddl: true
+
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/catalogo
@@ -23,6 +24,14 @@ eureka:
       defaultZone: ${EUREKA_URI:http://localhost:8090/eureka}
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: ALWAYS
 
 
 
